# jobcan-tools

./: .editorconfig  .gitignore  serverless.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/scraping-lambda/: devcontainer.json
.devcontainer/terraform/: Dockerfile  devcontainer.json
.github/workflows/: _apply.yml  _build.yml  _deploy.yml  dev.yml
alexa/: interactionModel.json
deployment/: serverless.dev.yml
functions/api/: .env  Dockerfile  Dockerfile.local  docker-compose.yml  log_config.yml  main.py  pyproject.toml
functions/api/dynamodb/: users.py
functions/api/handlers/: alexa.py
functions/api/lib/: aws.py  dynamodb.py  environment.py  logger.py  secrets.py  slack.py  sqs.py
functions/api/localstack/: 1.init-secret.sh  2.sqs.sh  3.dynamodb.sh
functions/api/localstack/dynamodb/: user-attributes.sh
functions/api/middleware/: request.py
functions/api/routers/: logging.py  slack.py
functions/api/schemas/: alexa.py  scraping_payload.py  slack.py  users.py
functions/api/services/: users.py
functions/scraping-lambda/: Dockerfile  Dockerfile.local  build.ts  docker-compose.yml  jest.config.mjs  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
functions/scraping-lambda/src/: execute-get-working-hours.ts  execute.ts  send-zac-sqs.ts
functions/scraping-lambda/src/entities/: asm.ts  jobcan.ts  user.ts  zac.ts
terraform/env/dev/: main.tf
terraform/modules/aws/: dynamodb.tf  ecr.tf  iam-policy.tf  iam-role-attachment.tf  iam-role.tf  kms.tf  s3.tf  secrets.tf  sqs.tf  variables.tf
(+16 files in other folders)
