[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
mangum = "^0.17.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
awscli-local = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
